# baselax

./: .gitignore  README.md  dqn_envpool.py  dqn_sb3.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
agent/: dqn.py
baselax/: __init__.py
baselax/agent/: dqn.py
baselax/agents/: __init__.py  agent.py  base_agent.py  dqn.py
baselax/configs/: config.py  default.yaml  dqn.yaml
baselax/utils/: network.py  seeding.py
configs/: dqn.yaml
configs/algs/: dqn.yaml
configs/envs/: cartpole.yaml
docs/source/: api.rst  conf.py  index.rst  usage.rst
docs/source/apis/: baselax.agent.rst  baselax.agents.rst  baselax.rst  baselax.utils.rst
examples/: dqn_atari.py  dqn_cartpole.py  dqn_envpool.py
examples/nni/: dqn_atari.yaml  nni_dqn_cartpole.py
utils/: network.py
