[metadata]
description = Baselax provides stable-baselines-style implementations of reinforcement learning (RL) algorithms with Google JAX framework.
url = https://github.com/mansicer/unity_rl
author = mansicer
author_email = mansicer@gmail.com
license = Apache-2.0

keywords =
    reinforcment learning
    jax

[options]
python_requires = >=3.7
zip_safe = False
